fix comment docs for swagger
